<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_100"
    tools:context=".ActivityLogin">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:titleTextColor="@android:color/white"
        android:elevation="4dp"
        app:title="@string/app_name"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/prompt_usuario"
        android:hint="@string/prompt_usuario"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.129" />

    <EditText
        android:id="@+id/clave"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/prompt_clave"
        android:hint="@string/prompt_clave"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/btnAcceder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:enabled="true"
        android:text="@string/btnAcceder"
        android:textColor="@color/misty_rose"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchSaveCredentials"
        app:layout_constraintVertical_bias="0.055" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchSaveCredentials"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:checked="false"
        android:text="@string/switchSaveCredentials"
        android:textColor="@color/ultra_violet"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clave"
        app:layout_constraintVertical_bias="0.059"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
