<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_100"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:titleTextColor="@android:color/white"
        android:elevation="4dp"
        app:title="@string/app_name"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="333dp"
        android:layout_height="492dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.382"
        app:srcCompat="@drawable/perro" />

    <TextView
        android:id="@+id/textViewBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="0"
        android:rotationX="0"
        android:rotationY="0"
        android:text="@string/bienvenido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintVertical_bias="0.068" />


    <Button
        android:id="@+id/btnBorrarCredenciales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borrarCredenciales"
        android:textColor="@color/misty_rose"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewBienvenido"
        app:layout_constraintVertical_bias="0.257" />
</androidx.constraintlayout.widget.ConstraintLayout>
